Update project to v4.1 [Fix bug in z-index mobile header]

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
 }
 
 .isMenuOpen {
